<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:background="@drawable/intro_one_blur"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/contentLinearLayoutofLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context="com.example.user.clubmahindra.activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:gravity="center"

                android:text="Member Login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Register"
                android:textColor="#F7A655"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginEditTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/border"

                android:drawableLeft="@drawable/login_buttonicon"
                android:hint="@string/hintMemberId"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/loginPasswordEditTextIdId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/password_buttonicon"
                android:hint="@string/hintPasswordId"
                android:inputType="textPassword"
                android:padding="10dp"

                android:textAlignment="center" />

            <Button
                android:id="@+id/loginButtonId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/loginButtonText"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/cantLogin"
                android:textColor="@color/lightBlue" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="or login with"
                android:textAllCaps="true"
                android:textColor="@color/brown" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="15dp"
                android:layout_weight="0.7"
                android:background="@drawable/button_shape_of_facebook"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="@color/lightBlue" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.7"
                android:background="@drawable/button_shape_of_facebook"
                android:gravity="center"
                android:text="@string/google"
                android:textColor="@color/lightBlue" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/drawable_progress"
        android:visibility="gone"></ProgressBar>


</RelativeLayout>