<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutId"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/shadedBlack"
    android:orientation="vertical"
    android:weightSum="6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/listRowImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:scaleType="fitXY"
            android:weightSum="1">


        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/cityTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:hint="@string/city"
                android:paddingLeft="50dp"
                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/margin1Id"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_toRightOf="@id/cityTextViewId"
                android:background="@color/white" />

            <TextView
                android:id="@+id/stateId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/margin1Id"
                android:hint="@string/state"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/margin2Id"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/stateId"
                android:background="@color/white"
                android:paddingLeft="20dp" />

            <TextView
                android:id="@+id/beachId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/margin2Id"
                android:hint="@string/beach"
                android:paddingLeft="5dp"

                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/margin3Id"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/beachId"
                android:background="@color/white"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/margin3Id"
                android:drawableLeft="@drawable/get_big"
                android:gravity="center"
                android:textColor="@color/white"
                android:hint="@string/offers"
                android:paddingRight="15dp"
                android:id="@+id/offersTextViewId"
                android:paddingLeft="5dp"
                android:textColorHint="@color/white" />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/reviewId"
            android:layout_width="0dp"
            android:drawableLeft="@drawable/star"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/reviews"
            android:paddingLeft="20dp" />

        <TextView
            android:id="@+id/roomTypeId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:hint="1 br" />
    </LinearLayout>
</LinearLayout>