<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.clubmahindra.fragment.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/set_line"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/aboutResort"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutResortDataId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f7f9fa"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="Address" />

                <TextView
                    android:id="@+id/addressTextViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/address"
                    android:hint="@string/address"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/shadedBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/emailAddressEdtiText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/mail"
                    android:hint="@string/email"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/shadedBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phoneNumberTextViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/phone"
                    android:hint="@string/phone"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/checkavailablity"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
        <!--  <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/aboutTextViewId"/>-->
    </ScrollView>

</FrameLayout>
